2.18.0 (2024-09-26)
-----------------------------
* General
  - Add global user config file as "config.json", which stores global user settings
    that are independent from user presets.
    For Windows, "config.json" is stored under "username\AppData\Roaming\TinyPedal" folder.
    For Linux, "config.json" is stored under "home/username/.config/TinyPedal" folder.
  - Log files are now stored in the same folder as global user config file.
  - All "Application" and "Compatibility" settings are moved into "config.json".
  - All Config dialogs now shows preset file name on title bar.
  - Color pick dialog now shows up to 16 previously picked colors in "Custom colors" selector.
  - Smaller panel size for "Fuel Calculator".
  - Most of widgets & modules code has been rewritten and optimized for improved efficiency
    and less CPU and memory usage.
    Note, currently both "Friction Circle" & "Navigation" Widgets are known to consume more
    CPU usage for drawing complex plot and animated map, especially with "Navigation" Widget
    and a lot of vehicles on track. If there is significant increase in APP 's CPU usage,
    try disable either widgets, which should help lower CPU usage to normal level.
    The new "System performance Widget" (see below) can be used to monitor performance change.

* [New]Application dialog
  - Add "Application" to main window "Config" menu for customizing global application settings
    and saved in global user config file.
  - "grid_move_size, minimum_update_interval, maximum_saving_attempts" options from
    "compatibility" are moved to "application".
  - Add "show_confirmation_for_batch_toggle" option, which shows confirmation dialog
    for enabling or disabling all widgets or modules. This option is enabled by default.

* [New]User path dialog
  - Add "User path" to main window "Config" menu for customizing global user path settings
    and saved in global user config file.